--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mmirror?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
@@ -7,16 +7,10 @@ spring.datasource.password=
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=anas.anas1998.tar@gmail.com
-spring.mail.password=
-
-# Other properties
+spring.mail.password=Hks.Hks@Hkss
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-
-# TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
 closure.codeGenerationError="something went wrong while generationg your code, be  calm we are working on it."
